--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
         <div>
             <ul class="folders_and_notes">
                 {% for item in list_of_folders %}
-                <li><a href='/load_folder_id/{{item["name"]}}'>
+                <li><a href='/load_folder_id/{{item["id"]}}'>
                     <div class="name">
                         {{item["name"]}}
                     </div>
@@ -22,7 +22,7 @@
         <div>
             <ul class="folders_and_notes">
                 {% for item in list_of_notes %}
-                <li><a href='/load_note_id/{{item["name"]}}'>
+                <li><a href='/load_note_id/{{item["id"]}}'>
                     <div class="name">
                         {{item["name"]}}
                     </div>
@@ -39,7 +39,7 @@
                 <p><textarea id="edit" name="content" cols="50" rows="12" type="text"
                              value='{{address or ""}}'>{{ note_content }}</textarea></p>
                 <input class="button succcess" type="submit" value="Сохранить"/>
-                <input class="button outline primary" type="submit" value="GPT"/>
+                <input class="button outline primary" type="button" formmethod="get" value="GPT"/>
             </form>
         </div>
     </div>
