Added login.html bypass handler Added a page for entering a new password Style for all pages was corrected

--- a/templates/enter_password.html
+++ b/templates/enter_password.html
@@ -7,12 +7,12 @@
 <body>
     <center>
         <div>
-            <h2>Восстановление пароля</h2>
+            <h2>Введите новый пароль</h2>
         </div>
     </center>
     <center><form method="post">
-        <h3>Код подтверждения отправлен на почту, указанную при регистрации</h3>
-        <input type="text" placeholder="Код подтверждения" name="code">
+        <input type="text" placeholder="Новый пароль" name="code_1">
+        <input type="text" placeholder="Повторите пароль" name="code_2">
         <input type="submit" value="Отправить">
     </form></center>
 </body>
