--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
-<form method="post">
-    <h3>Восстановление пароля</h3>
-    <p>Введите ник и почту на которую отправить</p>
-    <input type="text" placeholder="nickname" name="nickname">
-    <input type="submit" value="Получить код">
-</form>
+    <center>
+        <div>
+            <h2>Восстановление пароля</h2>
+        </div>
+    </center>
+    <center>
+        <form method="post">
+            <h3>Введите имя пользователя и почту на которую отправить код</h3>
+            <input type="text" placeholder="Имя пользователя" name="nickname">
+            <input type="submit" value="Получить код">
+        </form>
+    </center>
 </body>
+
 </html>
