--- a/templates/main.html
+++ b/templates/main.html
@@ -39,7 +39,7 @@
                 <p><textarea id="edit" name="content" cols="50" rows="12" type="text"
                              value='{{address or ""}}'>{{ note_content }}</textarea></p>
                 <input class="button succcess" type="submit" name="btn" value="Сохранить"/>
-                <input class="button outline primary" type="submit" name="btn" value="GPT"/>
+                <input class="button outline primary" type="submit" name="btn" value="Исправить"/>
             </form>
         </div>
     </div>
