added correct action of resetting password

--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -17,6 +17,7 @@
             <h3>Введите имя пользователя и почту на которую отправить код</h3>
             <input type="text" placeholder="Имя пользователя" name="nickname">
             <input type="submit" value="Получить код">
+            <h1>{{ message }}</h1>
         </form>
     </center>
 </body>
