--- a/templates/enter_code.html
+++ b/templates/enter_code.html
@@ -14,6 +14,7 @@
         <h3>Код подтверждения отправлен на почту, указанную при регистрации</h3>
         <input type="text" placeholder="Код подтверждения" name="code">
         <input type="submit" value="Отправить">
+        <h1>{{ message }}</h1>
     </form></center>
 </body>
 </html>
