--- a/templates/enter_password.html
+++ b/templates/enter_password.html
@@ -11,9 +11,10 @@
         </div>
     </center>
     <center><form method="post">
-        <input type="text" placeholder="Новый пароль" name="code_1">
-        <input type="text" placeholder="Повторите пароль" name="code_2">
+        <input type="password" placeholder="Новый пароль" name="pass1">
+        <input type="password" placeholder="Повторите пароль" name="pass2">
         <input type="submit" value="Отправить">
+        <h1>{{ message }}</h1>
     </form></center>
 </body>
 </html>
